修改list 字体值

--- a/src/main/webapp/WEB-INF/pages/phm/phm2.html
+++ b/src/main/webapp/WEB-INF/pages/phm/phm2.html
@@ -44,8 +44,8 @@
                                         <span>当前在线状态</span>
                                     </div>              
                                     <ul>
-                                        <li>累计接入量: <a href="#">496440</a></li>
-                                        <li>累计运行时间:  <a href="#">434884994</a> <i>小时</i></li>
+                                        <li>累计接入量: <a href="#">496,440</a></li>
+                                        <li>累计运行时间:  <a href="#">434,884,994</a> <i>小时</i></li>
                                     </ul>
                                     <div class="imgbox boxTitle2">
                                             <span>在线机器健康运行时间</span>
@@ -68,7 +68,7 @@
                                         </div>
                                         <p class="txt1">冰冷</p>
                                         <p class="txt2">自能产品累计接入数</p>
-                                        <p class="txt3">38462</p>
+                                        <p class="txt3">38,462</p>
                                         <p class="txt4">MFOP(无故障运行时间)</p>
                                         <p class="txt5">1,010,781,383 <span>小时</span> </p>
                                     </div>
@@ -88,9 +88,9 @@
                                         </div>
                                         <p class="txt1">洗涤</p>
                                         <p class="txt2">自能产品累计接入数</p>
-                                        <p class="txt3">38462</p>
+                                        <p class="txt3">32,364</p>
                                         <p class="txt4">MFOP(无故障运行时间)</p>
-                                        <p class="txt5">1,010,781,383 <span>小时</span> </p>
+                                        <p class="txt5">283,508,604<span>小时</span> </p>
                                     </div>
                                 </div>
                                 <div class="listsMiddle echarts">
@@ -108,9 +108,9 @@
                                         </div>
                                         <p class="txt1">家空</p>
                                         <p class="txt2">自能产品累计接入数</p>
-                                        <p class="txt3">38462</p>
+                                        <p class="txt3">609,364</p>
                                         <p class="txt4">MFOP(无故障运行时间)</p>
-                                        <p class="txt5">1,010,781,383 <span>小时</span> </p>
+                                        <p class="txt5">5,338,028,640<span>小时</span> </p>
                                     </div>
                                 </div>
                                 <div class="listsMiddle echarts">
@@ -128,9 +128,9 @@
                                             </div>
                                             <p class="txt1">商空</p>
                                             <p class="txt2">自能产品累计接入数</p>
-                                            <p class="txt3">38462</p>
+                                            <p class="txt3">4,340</p>
                                             <p class="txt4">MFOP(无故障运行时间)</p>
-                                            <p class="txt5">1,010,781,383 <span>小时</span></p>
+                                            <p class="txt5">38,014,800<span>小时</span></p>
                                         </div>
                                     </div>
                                     <div class="listsMiddle echarts">
@@ -148,9 +148,9 @@
                                             </div>
                                             <p class="txt1">热水器</p>
                                             <p class="txt2">自能产品累计接入数</p>
-                                            <p class="txt3">38462</p>
+                                            <p class="txt3">7,908</p>
                                             <p class="txt4">MFOP(无故障运行时间)</p>
-                                            <p class="txt5">1,010,781,383 <span>小时</span> </p>
+                                            <p class="txt5">62,178,480<span>小时</span> </p>
                                         </div>
                                     </div>
                                     <div class="listsMiddle echarts">
@@ -168,9 +168,9 @@
                                             </div>
                                             <p class="txt1">厨电</p>
                                             <p class="txt2">自能产品累计接入数</p>
-                                            <p class="txt3">38462</p>
+                                            <p class="txt3">4,826</p>
                                             <p class="txt4">MFOP(无故障运行时间)</p>
-                                            <p class="txt5">1,010,781,383 <span>小时</span></p>
+                                            <p class="txt5">42,275,760 <span>小时</span></p>
                                         </div>
                                     </div>
                                     <div class="listsMiddle echarts">
@@ -309,7 +309,7 @@
 //news 滚动 start 
 $(function(){
 $('.myscroll').myScroll({
-    speed: 10, //数值越大，速度越慢
+    speed: 20, //数值越大，速度越慢
     rowHeight: 85 //li的高度
 });
 });
