--- a/src/main/webapp/WEB-INF/pages/phm/phm2.html
+++ b/src/main/webapp/WEB-INF/pages/phm/phm2.html
@@ -32,7 +32,7 @@
                     <div class="LeftContent fl">
                         <div class="mainTitle">
                             <div class="mainTitleContent">
-                                <a style="color:#6cf;" href="${contextPath!}/phm/health">
+                                <a style="color:#6cf;" href="${contextPath!}/phm/status">
                                 <span>自诊断自预测</span>
                                 </a>
                             </div>
