--- a/src/main/webapp/WEB-INF/pages/lab/flatMap.html
+++ b/src/main/webapp/WEB-INF/pages/lab/flatMap.html
@@ -9,11 +9,12 @@
         html, body {
             margin: 0;
             width: 100%;
-            height: 98%;
+            height: 100%;
             overflow: hidden;
         }
         .mapFlat {
             height: 100%;
+            padding-bottom: 1em;
         }
         .echart_tip_head:hover{
             cursor: pointer;
