--- a/src/main/webapp/WEB-INF/pages/phm/index.html
+++ b/src/main/webapp/WEB-INF/pages/phm/index.html
@@ -123,7 +123,7 @@
                                             <img src="${contextPath}/static/phm/images/system/jiakong.png" alt=""/>
                                         </div> -->
                                         <div class="imgbox22">
-                                                <div class="imgIcon jiakong"></div>
+                                                <div class="imgIcon jiakog"></div>
                                             </div>
                                         <p class="txt1">家空</p>
                                         <p class="txt2">智能产品累计接入数</p>
@@ -413,8 +413,8 @@ $(function(){
 		timeStatus();
 	},1000);
 	$('.myscroll').myScroll({
-	    speed: 10, //数值越大，速度越慢
-	    rowHeight: 60   //li的高度
+	    speed: 30, //数值越大，速度越慢
+	    rowHeight: 55   //li的高度
     });
     
 });
