--- a/src/main/webapp/WEB-INF/pages/phm/indexAnimation.html
+++ b/src/main/webapp/WEB-INF/pages/phm/indexAnimation.html
@@ -11,11 +11,11 @@
 <body>
 <div class="myContainer">
     <div class="textPicBox">
-        <span>整机诊断预测模型</span>
+        <h3>整机诊断预测模型</h3>
         <img class="pic" src="${contextPath}/static/phm/images/strategy/mod_1.png" alt="整机诊断预测模型">
     </div>
     <div class="textPicBox">
-        <span>通过大数据124类故障模式训练10种诊断预测模式</span>
+        <h3>通过大数据124类故障模式训练10种诊断预测模式</h3>
         <div class="picBox aiBox">
             <div class="aiBox1">
                 <div class="line"></div>
