删掉一些js,修改PHm ulab若干

--- a/src/main/webapp/WEB-INF/pages/lab/full.html
+++ b/src/main/webapp/WEB-INF/pages/lab/full.html
@@ -9,9 +9,9 @@
 <!--<script src="${contextPath!}/static/asserts/js/jquery-2.2.4.js"></script>-->
 <script src="${contextPath!}/static/asserts/js/bootstrap.min.js"></script>
 <script src="${contextPath!}/static/asserts/echarts/echarts-3.5.2.js"></script>
-<script src="${contextPath!}/static/js/manyEcharts.js?time=New Date()"></script>
-<script src="${contextPath!}/static/js/common.js?time=New Date()"></script>
-<script src="${contextPath!}/static/asserts/echarts/wordcloudFromNet.js?time=New Date()"></script>
+<script src="${contextPath!}/static/js/manyEcharts.js"></script>
+<script src="${contextPath!}/static/js/common.js"></script>
+<script src="${contextPath!}/static/asserts/echarts/wordcloudFromNet.js"></script>
 <script>
     var fromPage='${fromPage!}';
    // document.domain="10.130.96.65";
