--- a/src/main/webapp/WEB-INF/pages/lab/index.html
+++ b/src/main/webapp/WEB-INF/pages/lab/index.html
@@ -18,6 +18,27 @@
     <script>
 
         /* background-img: url('${contextPath!}/static/img/bg-2.jpg') */
+        // videoFadeOut();
+/*
+        //进入时的视频淡出效果，开发时注掉下面这些代码
+        function videoFadeOut() {
+            $("body").prepend('<div id="mask" style="background-color: black">' +
+                '<video src="' + contextPath + '/static/img/movieHead_4480.ogv"  width="' + pageW*1.04 + '" height="105%" preload="auto" >抱歉，您的浏览器不支持video标签</video>' +
+                '</div>'
+            );
+            var $video = $('video');
+            $video.click(function () {
+                $(this)[0].play()
+            });
+            $video[0].addEventListener('ended', function () {
+                $(this).parent().animate({
+                    opacity: 0
+                }, 3000, function () {
+                    $(this).hide();
+                })
+            });
+        }
+*/
         pageResize();
     </script>
 
@@ -37,6 +58,8 @@
 </div>
 <audio id="clickSounds" hidden src="${contextPath!}/static/sounds/cha.wav">123</audio>
 <script>
+
+
     //点击鼠标的声音
     $(function () {
         $("div,a,img").click(function (e) {
