--- a/src/main/webapp/WEB-INF/pages/phm/indexAnimation.html
+++ b/src/main/webapp/WEB-INF/pages/phm/indexAnimation.html
@@ -58,6 +58,11 @@
         <div class="line"></div>
         <div class="line"></div>
     </div>
+    <div class="inputTextAnimation">
+        <ul>
+
+        </ul>
+    </div>
 </div>
 <script src="${contextPath}/static/phm/asserts/js/jquery-2.2.4.js" type="text/javascript" charset="utf-8"></script>
 <script>
