--- a/src/main/webapp/WEB-INF/pages/phm/status.html
+++ b/src/main/webapp/WEB-INF/pages/phm/status.html
@@ -27,7 +27,7 @@
 				<!--bottom left-->
 				<div class="map-mod">
 					<div class="mapTitle">
-						全球冰箱分布
+						国内冰箱分布
 					</div>
 					<div id="myMap" style="width:100%;height:100%"></div>
 				</div>
@@ -61,7 +61,7 @@
 						</div>
 						<div class="start infobox">
 							<p class="txt1">启用时间：</p>
-							<p class="txt2"></p>
+							<p class="txt2">2018年1月26日</p>
 						</div>
 						<div class="address infobox">
 							<p class="txt1">地址：</p>
@@ -73,7 +73,7 @@
 						</div>
 						<div class="time infobox">
 							<p class="txt1">运行总时长：</p>
-							<p class="txt2">2840h</p>
+							<p class="txt2">3840h</p>
 						</div>
 					</div>
 				</div></a>
@@ -784,14 +784,14 @@
 				var myMapCharts = echarts.init(document.getElementById("myMap"));
 				var mapChartsOptions = {
 					dataRange: {
-				        min : 1,
+				        min : 0,
 				        max : 100,
 				        precision:0,
 				        itemWidth:20*bodyScale,
 						itemHeight:10*bodyScale,
 				        calculable : true,//不可拖动
 				        padding:10*bodyScale,
-				        color: ['aqua','lime', 'yellow','orange','#ff3333'],
+				        color: ['lime','lime', 'lime','lime','lime'],
 				        textStyle:{
 				            color:'#fff',
 				            fontSize:13*bodyScale
@@ -896,7 +896,7 @@
 				                },
 				                itemStyle:{
 				                    normal:{
-				                    	color:'#00ffff',
+				                    	color:'lime',
 				                        label:{show:false}
 				                    },
 				                    emphasis: {
@@ -922,7 +922,7 @@
 				                },
 				                itemStyle:{
 				                    normal:{
-				                    	color:'#990033',
+				                    	color:'lime',
 				                        label:{show:false}
 				                    },
 				                    emphasis: {
@@ -947,7 +947,7 @@
 				                },
 				                itemStyle:{
 				                    normal:{
-				                    	color:'red',
+				                    	color:'lime',
 				                        label:{show:false}
 				                    },
 				                    emphasis: {
@@ -1158,7 +1158,7 @@
 											}
 											if(S16==0){
 												image16url="upClose.png";
-											}else if(S14==1){
+											}else if(S16==1){
 												image16url="upOpen.png";
 											}
 											if(S17==0){
