修改坐标点

--- a/src/main/webapp/WEB-INF/pages/phm/status.html
+++ b/src/main/webapp/WEB-INF/pages/phm/status.html
@@ -791,37 +791,44 @@
                     {name:'良好',x:366*that.bodyScale,y:220*that.bodyScale},
                     {name:'良好',x:357*that.bodyScale,y:220*that.bodyScale},
                     {name:'良好',x:358*that.bodyScale,y:220*that.bodyScale},
-                    // {name:'良好',x:359*that.bodyScale,y:220*that.bodyScale},
-                    // {name:'良好',x:356*that.bodyScale,y:210*that.bodyScale},
-                    // {name:'良好',x:367*that.bodyScale,y:190*that.bodyScale},
-                    // {name:'良好',x:368*that.bodyScale,y:195*that.bodyScale},
-                    {name:'良好',x:369*that.bodyScale,y:198*that.bodyScale},
-                    {name:'良好',x:366*that.bodyScale,y:218*that.bodyScale},
-                    {name:'良好',x:358*that.bodyScale,y:217*that.bodyScale},
-                    {name:'良好',x:356*that.bodyScale,y:210*that.bodyScale},
-                    {name:'良好',x:357*that.bodyScale,y:208*that.bodyScale},
-                    {name:'良好',x:358*that.bodyScale,y:200*that.bodyScale},
-                    {name:'良好',x:359*that.bodyScale,y:204*that.bodyScale},
-                    {name:'良好',x:356*that.bodyScale,y:205*that.bodyScale},
-                    {name:'良好',x:357*that.bodyScale,y:203*that.bodyScale},
-                    {name:'良好',x:358*that.bodyScale,y:201*that.bodyScale},
-                    {name:'良好',x:356*that.bodyScale,y:210*that.bodyScale},
-                    {name:'良好',x:360*that.bodyScale,y:180*that.bodyScale},
-                    {name:'良好',x:358*that.bodyScale,y:185*that.bodyScale},
-                    {name:'良好',x:359*that.bodyScale,y:168*that.bodyScale},
-                    {name:'良好',x:340*that.bodyScale,y:160*that.bodyScale},
-                    {name:'良好',x:348*that.bodyScale,y:165*that.bodyScale},
-                    {name:'良好',x:349*that.bodyScale,y:158*that.bodyScale},
-                    {name:'良好',x:330*that.bodyScale,y:140*that.bodyScale},
-                    {name:'良好',x:328*that.bodyScale,y:145*that.bodyScale},
-                    {name:'良好',x:329*that.bodyScale,y:148*that.bodyScale},
-                    {name:'良好',x:356*that.bodyScale,y:220*that.bodyScale},
-                    {name:'良好',x:357*that.bodyScale,y:238*that.bodyScale},
-                    {name:'良好',x:358*that.bodyScale,y:230*that.bodyScale},
-                    {name:'良好',x:359*that.bodyScale,y:234*that.bodyScale},
-                    {name:'良好',x:357*that.bodyScale,y:248*that.bodyScale},
-                    {name:'良好',x:358*that.bodyScale,y:240*that.bodyScale},
-                    {name:'良好',x:359*that.bodyScale,y:244*that.bodyScale},
+                    {name:'良好',x:366*that.bodyScale,y:220*that.bodyScale},
+                    {name:'良好',x:378*that.bodyScale,y:220*that.bodyScale},
+                    {name:'良好',x:351*that.bodyScale,y:220*that.bodyScale}, {name:'良好',x:366*that.bodyScale,y:220*that.bodyScale},
+                    {name:'良好',x:352*that.bodyScale,y:220*that.bodyScale},
+                    {name:'良好',x:352*that.bodyScale,y:220*that.bodyScale},
+                    {name:'良好',x:323*that.bodyScale,y:310*that.bodyScale},
+                    {name:'良好',x:313*that.bodyScale,y:320*that.bodyScale},
+                    {name:'良好',x:349*that.bodyScale,y:315*that.bodyScale},
+                    {name:'良好',x:348*that.bodyScale,y:307*that.bodyScale},
+                    {name:'良好',x:347*that.bodyScale,y:296*that.bodyScale},
+                    {name:'良好',x:347*that.bodyScale,y:296*that.bodyScale},
+                    {name:'良好',x:323*that.bodyScale,y:310*that.bodyScale},
+                    {name:'良好',x:313*that.bodyScale,y:320*that.bodyScale},
+                    {name:'良好',x:309*that.bodyScale,y:325*that.bodyScale},
+                    {name:'良好',x:348*that.bodyScale,y:307*that.bodyScale},
+                    {name:'良好',x:351*that.bodyScale,y:296*that.bodyScale},
+                    {name:'良好',x:230*that.bodyScale,y:296*that.bodyScale},
+                    {name:'良好',x:240*that.bodyScale,y:305*that.bodyScale},
+                    {name:'良好',x:210*that.bodyScale,y:325*that.bodyScale},
+                    {name:'良好',x:210*that.bodyScale,y:327*that.bodyScale},
+                    {name:'良好',x:197*that.bodyScale,y:307*that.bodyScale},
+                    {name:'良好',x:217*that.bodyScale,y:327*that.bodyScale},
+                    {name:'良好',x:219*that.bodyScale,y:323*that.bodyScale},
+                    {name:'良好',x:221*that.bodyScale,y:325*that.bodyScale},
+                    {name:'良好',x:241*that.bodyScale,y:319*that.bodyScale},
+                    {name:'良好',x:231*that.bodyScale,y:315*that.bodyScale},
+                    {name:'良好',x:331*that.bodyScale,y:305*that.bodyScale},
+                    {name:'良好',x:317*that.bodyScale,y:315*that.bodyScale},
+                    {name:'良好',x:287*that.bodyScale,y:312*that.bodyScale},
+                    {name:'良好',x:287*that.bodyScale,y:335*that.bodyScale},
+                    {name:'良好',x:297*that.bodyScale,y:319*that.bodyScale},
+                    {name:'良好',x:277*that.bodyScale,y:325*that.bodyScale},
+                    {name:'良好',x:253*that.bodyScale,y:315*that.bodyScale},
+                    {name:'良好',x:247*that.bodyScale,y:305*that.bodyScale},
+                    {name:'良好',x:340*that.bodyScale,y:295*that.bodyScale},
+                    {name:'良好',x:380*that.bodyScale,y:255*that.bodyScale},
+                    {name:'良好',x:386*that.bodyScale,y:265*that.bodyScale},
+                    {name:'良好',x:386*that.bodyScale,y:278*that.bodyScale},
                 ]);
 				console.log(good)
 				var mapChartsOptions = {
