PHM柱子点进去的不同场景

--- a/src/main/webapp/WEB-INF/pages/phm/index.html
+++ b/src/main/webapp/WEB-INF/pages/phm/index.html
@@ -961,8 +961,9 @@
                             image17 = "冷冻室下门开启";
                             open = true;
                         }
-                        // open = 1;
-                        // failure = 1;
+                        open = 1;
+                        failure = 1;
+
                         list2.setOption({
                             series: {
                                 data: [Number(open), 1, failure]
