--- a/src/main/webapp/WEB-INF/pages/phm/index.html
+++ b/src/main/webapp/WEB-INF/pages/phm/index.html
@@ -388,7 +388,7 @@
 
     let [numbers, times] = [[], []], //数量和时间基数
         [refreshHz, counter] = [1000, 0], //刷新率和计数器
-        addRate = [1 / 7, 1 / 9, 1 / 5, 1 / 5, 1 / 3, 1 / 3]; //增长率
+        addRate = [1 / 30, 1 / 9, 1 / 5, 1 / 30, 1 / 30, 1 / 7]; //增长率
 
     $(".lists").each(function () {
         //console.log($(this)[0])
@@ -977,8 +977,8 @@
                             image17 = "冷冻室下门开启";
                             open = true;
                         }
-                        open = 1;
-                        failure = 1;
+                        // open = 1;
+                        // failure = 1;
 
                         list2.setOption({
                             series: {
