--- a/src/main/webapp/WEB-INF/pages/phm/indexAnimation.html
+++ b/src/main/webapp/WEB-INF/pages/phm/indexAnimation.html
@@ -11,11 +11,14 @@
 <body>
 <div class="myContainer">
     <div class="textPicBox">
-        <h3>整机诊断预测模型</h3>
-        <img class="pic" src="${contextPath}/static/phm/images/strategy/mod_1.png" alt="整机诊断预测模型">
+        <h3>诊断预测模型</h3>
+        <h4>诊断模型</h4>
+        <img class="pic" src="${contextPath}/static/phm/images/strategy/zhenduan.png" alt="预测模型">
+        <h4>预测模型</h4>
+        <img class="pic" src="${contextPath}/static/phm/images/strategy/mod_1.png" alt="诊断模型">
     </div>
     <div class="textPicBox">
-        <h3>通过大数据124类故障模式训练10种诊断预测模型</h3>
+        <h3>基于大数据，利用相关性及神经网络建诊断预测模型</h3>
         <div class="picBox aiBox">
             <div class="aiBox1">
                 <div class="line"></div>
