--- a/src/main/webapp/WEB-INF/pages/phm/index.html
+++ b/src/main/webapp/WEB-INF/pages/phm/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
-    <meta name="PHM" content="phm二期"/>
-    <title>PHM首页</title>
+    <meta name="HIHM" content="HIHM二期"/>
+    <title>HIHM首页</title>
 
     <link rel="stylesheet" href="${contextPath}/static/phm/css/common.css"/>
     <link rel="stylesheet" href="${contextPath}/static/phm/css/phm2.css"/>
@@ -230,7 +230,7 @@
                 <!-- 标题 -->
                 <div class="mainTitle">
                     <div class="mainTitleContent">
-                        <span>PHM技术:大数据+自训练模型</span>
+                        <span>HIHM技术:大数据+自训练模型</span>
                     </div>
                 </div>
                 <!-- 右侧主体部分 -->
