马上看到曙光的修改

--- a/src/main/webapp/WEB-INF/pages/phm/index.html
+++ b/src/main/webapp/WEB-INF/pages/phm/index.html
@@ -230,7 +230,7 @@
                 <!-- 标题 -->
                 <div class="mainTitle">
                     <div class="mainTitleContent">
-                        <span>HIHM技术:大数据+自训练模型</span>
+                        <span>自迭代&emsp;←&emsp;自预测&emsp;←&emsp;自诊断&emsp;←&emsp;自反馈&emsp;←&emsp;云数据</span>
                     </div>
                 </div>
                 <!-- 右侧主体部分 -->
@@ -700,7 +700,7 @@
             },
             yAxis: {
                 name: '万台',
-                type: '',
+                type: 'value',
                 logBase:2,
                 //Y轴 坐标轴名称显示
                 nameTextStyle: {
@@ -743,7 +743,7 @@
                             color: '#00adef'
                         }
                     },
-                    data: [0.48, 3.2, 6.9, 0.43, 0.79,3.8]
+                    data: [0.1, 5.7, 37.6, 2.2, 3.9,12.9]
                     // data: [0.48, 3.2, 60.9, 4.3, 7.9,38.62]
                 },
                 {
