--- a/src/main/webapp/pages/credit/order/order_view.html
+++ b/src/main/webapp/pages/credit/order/order_view.html
@@ -9,10 +9,14 @@ var bodyContent = {
 	<!-- 数据列表 -->
 	<table class="table">
 		<%  // 列表头部 %>
-		的双丰收的范德萨	
-		<% if(model.id=='1'){ %>
-		${model.name!}
-		<% } %>
+			<tr>
+				<td>编码</td>
+				<td>${model.id!}</td>
+			</tr>
+			<tr>
+				<td>订单名称</td>
+				<td>${model.name}</td>
+			</tr>
 	</table>
 	
 	<div style="height: 50px;clear: both;">&nbsp;</div>
