--- a/src/main/webapp/pages/admin/login.html
+++ b/src/main/webapp/pages/admin/login.html
@@ -88,7 +88,7 @@ body {
 
 				<div class="ui-form-item ui-form-item-focus">
 					<label class="ui-label"> <span
-						class="ui-icon ui-icon-userDEF">账户名：</span>
+						class="ui-icon ui-icon-userDEF">账bbbbbbb户名：</span>
 					</label> <input type="text" class="ui-input ui-input-normal"
 						name="username" autofocus="autofocus" autocomplete="off"
 						tabindex="1" value="" maxlength="100" placeholder="登录账号">
