--- a/src/main/webapp/pages/system/dict/dict_view.html
+++ b/src/main/webapp/pages/system/dict/dict_view.html
@@ -20,6 +20,41 @@ var bodyContent = {
 				<td>名称</td>
 				<td>${item.detail_name}</td>
 			</tr>
+			
+			
+			<!-- start -->
+			<tr>
+				<td>详情名英文</td>
+				<td>${item.detail_name_en}</td>
+			</tr>
+			
+			<tr>
+				<td>详情类型</td>
+				<td>${item.detail_type}</td>
+			</tr>
+			
+			<tr>
+				<td>详情状态</td>
+				<td>${item.detail_state}</td>
+			</tr>
+			
+			<tr>
+				<td>详情内容</td>
+				<td>${item.detail_content}</td>
+			</tr>
+			
+			<tr>
+				<td>详情标记</td>
+				<td>${item.detail_remark}</td>
+			</tr>
+			
+			<tr>
+				<td>创建日期</td>
+				<td>${item.create_time}</td>
+			</tr>
+					
+			
+			<!-- end -->
 			<tr>
 				<td>编号</td>
 				<td>${item.detail_code}</td>
