--- a/src/main/webapp/pages/system/dict/dict_edit.html
+++ b/src/main/webapp/pages/system/dict/dict_edit.html
@@ -57,6 +57,65 @@ var bodyContent = {
 			<td><input type="text" name="model.detail_sort" class="form-control" 
 				value="${strutil.nvl(item.detail_sort,'0')}" /></td>
 		</tr>
+		
+		<!-- start -->
+		
+		<tr>
+			<td>详情名英文</td>
+			<td><input type="text" name="model.detail_name_en" class="form-control" 
+				value="${strutil.nvl(item.detail_name_en,'0')}" /></td>
+		</tr>
+		
+		<tr>
+			<td>详情类型</td>
+			<td><input type="text" name="model.detail_type" class="form-control" 
+				value="${strutil.nvl(item.detail_type,'0')}" /></td>
+		</tr>
+		
+		
+		<tr>
+			<td>详情状态</td>
+			<td><input type="text" name="model.detail_state" class="form-control" 
+				value="${strutil.nvl(item.detail_state,'0')}" /></td>
+		</tr>
+		
+		<tr>
+			<td>详情内容</td>
+			<td><input type="text" name="model.detail_content" class="form-control" 
+				value="${strutil.nvl(item.detail_content,'0')}" /></td>
+		</tr>
+		
+		<tr>
+			<td>详情标记</td>
+			<td><input type="text" name="model.detail_remark" class="form-control" 
+				value="${strutil.nvl(item.detail_remark,'0')}" /></td>
+		</tr>
+		
+		<tr>
+			<td>创建日期</td>
+			<td><input type="text" name="model.create_time" class="form-control" 
+				value="${strutil.nvl(item.create_time,'0')}" /></td>
+		</tr>
+		
+		<tr>
+			<td>编号</td>
+			<td><input type="text" name="model.detail_code" class="form-control" 
+				value="${strutil.nvl(item.detail_code,'0')}" /></td>
+		</tr>
+		
+		<tr>
+			<td>排序号</td>
+			<td><input type="text" name="model.detail_sort" class="form-control" 
+				value="${strutil.nvl(item.detail_sort,'0')}" /></td>
+		</tr>
+		
+		
+		
+		
+		
+		
+		<!-- end -->
+		
 		<tr>
 			<td></td>
 			<td>
@@ -68,7 +127,7 @@ var bodyContent = {
 	<div style="height: 50px;clear: both;">&nbsp;</div>
 	<nav class="navbar navbar-default navbar-fixed-bottom">
 	  <div class="container" style="padding: 5px 0px 5px 0px;text-align: center;">
-	  		<button class="btn btn-primary" onclick="oper.save(${item.detail_id});return false;">保 存</button>
+	  		<button class="btn btn-primary" onclick="oper.save(${item.detail_id});return false;">保存</button>
 			<button class="btn btn-default" onclick="closeIframe();return false;">关 闭</button>
 	  </div>
 	</nav>
